--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cronômetro de Proposta</title>
     <style>
-        
+
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -93,7 +93,7 @@
     <div class="logo-container">
         <img src="img/logo.png" alt="Logo" class="logo">
     </div>
-    <h1>Proposta Válida por apenas 24 Horas!!</h1>
+    <h1>Proposta válida por apenas 24 Horas!!</h1>
     <div id="countdown"></div>
     <div id="contact">
         <p>Para aceitar a proposta, entre em contato via WhatsApp pelo botão abaixo:</p>
